[package]
authors = ["7h3qu1rkyb1t <the.qu1rkyb1t@gmail.com>"]
name = "space-war"
edition = "2018"
version = "0.1.0"
default-run = "main"


[dependencies.defmt]
version = "0.1.0"

[dependencies.defmt-rtt]
version = "0.1.0"

[dependencies.panic-probe]
version = "0.1.0"
features = ["print-defmt"]

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-rtic = {git = "https://github.com/rtic-rs/cortex-m-rtic/"}
embedded-graphics = "0.6.2"
ssd1306 = "0.4.0"
heapless = "0.5.6"
typenum = "1.12.0"

[dependencies.stm32f7xx-hal]
path = "/home/gireesh/gits/stm32f7xx-hal/"
features = ["stm32f767", "rt"]

[features]
default = [
  "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[lib]
name = "space_war"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "main"
path = "src/bin/main.rs"
test = false
bench = false
